# _________test

./: Build-MSVC.yml  CMakeLists.txt  README.md
.github/workflows/: main.yml
res/: 2dxtra.def  2dxtra.rc
src/2dxtra/: api.cc  api.h  chart_set.cc  chart_set.h  game.cc  game.h  init.cc  input.cc  input.h  log.cc  log.h  meta.h.in  offsets.h.in  score_set.cc  score_set.h
src/2dxtra/features/: autoplay.cc  autoplay.h  autoretry.cc  autoretry.h  chart_loader.cc  chart_loader.h  cn_override.cc  cn_override.h  cn_transformer.cc  cn_transformer.h  keysound_switch.cc  keysound_switch.h  play_visuals.cc  play_visuals.h  regular_speed.cc  regular_speed.h  scratch_swap.cc  scratch_swap.h  timing_modifier.cc  timing_modifier.h  unrandomizer.cc  unrandomizer.h
src/2dxtra/gui/: autoretry_window.cc  autoretry_window.h  cn_transformer_window.cc  cn_transformer_window.h  gui.cc  gui.h  loader.cc  loader.h  log_window.cc  log_window.h  main_window.cc  main_window.h  timing_modifier_window.cc  timing_modifier_window.h  unrandomizer_window.cc  unrandomizer_window.h
src/2dxtra/hooks/: attract_randomizer_hook.cc  attract_randomizer_hook.h  card_out_hook.cc  card_out_hook.h  chart_load_hook.cc  chart_load_hook.h  dan_select_hook.cc  dan_select_hook.h  input_hook.cc  input_hook.h  judge_timing_hook.cc  judge_timing_hook.h  mdata_load_hook.cc  mdata_load_hook.h  mselect_genre_hook.cc  mselect_genre_hook.h  music_select_hook.cc  music_select_hook.h  network_hook.cc  network_hook.h  play_field_load_hook.cc  play_field_load_hook.h  renderer_hook.cc  renderer_hook.h  reset_state_hook.cc  reset_state_hook.h  result_title_hook.cc  result_title_hook.h  score_invalidator_hook.cc  score_invalidator_hook.h  stage_result_hook.cc  stage_result_hook.h
src/2dxtra/offsets/: 2024082600-010.cc  2024082600-012.cc
src/2dxtra/util/: code_patch.h  memory.cc  memory.h  scoped_page_permissions.h
